--- a/app/src/main/res/layout/item_insight_detail_basic_info.xml
+++ b/app/src/main/res/layout/item_insight_detail_basic_info.xml
@@ -74,7 +74,9 @@
             <com.naver.maps.map.MapView
                 android:id="@+id/map_insight_detail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="335:200"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
