refactor: RecyclerView onClick 이벤트 로직 수정

--- a/app/src/main/res/layout/item_insight_region.xml
+++ b/app/src/main/res/layout/item_insight_region.xml
@@ -17,8 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:onClick="@{() -> viewModel.onClickItem(item)}">
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/tv_insight_region"
