--- a/app/src/main/res/layout/item_insight_vertical.xml
+++ b/app/src/main/res/layout/item_insight_vertical.xml
@@ -16,8 +16,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="@{() -> viewModel.onClickItem(item)}">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/iv_insight"
