--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,10 @@
     <data>
 
         <variable
+            name="mainViewModel"
+            type="info.imdang.imdang.ui.main.MainViewModel" />
+
+        <variable
             name="viewModel"
             type="info.imdang.imdang.ui.main.home.HomeViewModel" />
     </data>
@@ -84,5 +88,42 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            bindVisible="@{mainViewModel.isShowTooltip}"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar">
+
+            <ImageView
+                android:id="@+id/iv_polygon_up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="80dp"
+                android:elevation="8dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_polygon_up"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_free_pass_tool_tip"
+                style="@style/T_500_14_19_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/sr_orange500_all8"
+                android:elevation="8dp"
+                android:gravity="center"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="14dp"
+                android:text="무료 패스권은 교환소에서 확인할 수 있어요"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_polygon_up" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
