--- a/app/src/main/res/layout/fragment_home_search.xml
+++ b/app/src/main/res/layout/fragment_home_search.xml
@@ -92,7 +92,7 @@
             app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar"/>
 
         <androidx.core.widget.NestedScrollView
-            android:id="@+id/ns_home_search"
+            android:id="@+id/nsv_home_search"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -155,6 +155,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/tv_home_my_insight_see_all"
                         style="@style/T_400_14_19_6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -224,6 +225,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/tv_home_new_insight_see_all"
                         style="@style/T_400_14_19_6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
