--- a/app/src/main/res/layout/item_insight_detail_basic_info.xml
+++ b/app/src/main/res/layout/item_insight_detail_basic_info.xml
@@ -65,10 +65,11 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_map_insight_detail"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/sr_white_gray100_all8"
             android:padding="1dp"
+            app:layout_constraintDimensionRatio="335:200"
             app:layout_constraintTop_toBottomOf="@id/tv_apt_address">
 
             <com.naver.maps.map.MapView
