--- a/component/src/main/res/values/text-styles.xml
+++ b/component/src/main/res/values/text-styles.xml
@@ -48,6 +48,11 @@
         <item name="android:lineHeight">25.2dp</item>
     </style>
 
+    <style name="T_600_20_28" parent="pretendard600">
+        <item name="android:textSize">20sp</item>
+        <item name="android:lineHeight">28dp</item>
+    </style>
+
     <style name="T_600_24_33_6" parent="pretendard600">
         <item name="android:textSize">24sp</item>
         <item name="android:lineHeight">33.6dp</item>
