--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -83,6 +83,7 @@
                 tools:text="홍길동" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:background="@drawable/selector_white_gray100_all6"
