--- a/app/src/main/res/layout/fragment_write_insight_basic_info.xml
+++ b/app/src/main/res/layout/fragment_write_insight_basic_info.xml
@@ -5,6 +5,12 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="info.imdang.imdang.ui.write.WriteInsightViewModel" />
+
     </data>
 
     <ScrollView
@@ -104,6 +110,7 @@
                 app:layout_constraintTop_toBottomOf="@id/cl_image_container" />
 
             <TextView
+                android:id="@+id/tv_title_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -112,16 +119,39 @@
                 app:layout_constraintStart_toEndOf="@id/tv_title_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_title_subject" />
 
+            <ImageView
+                android:id="@+id/iv_check_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isInsightTitleCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_title_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_title_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_title_asterisk"
+                tools:visibility="visible" />
+
+            <TextView
+                style="@style/T_500_12_16_8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/insight_title_input_standard"
+                android:textColor="@color/gray_500"
+                app:layout_constraintBottom_toBottomOf="@id/tv_title_subject"
+                app:layout_constraintEnd_toStartOf="@+id/tv_title_count"
+                app:layout_constraintTop_toTopOf="@id/tv_title_subject" />
+
             <TextView
                 android:id="@+id/tv_title_count"
                 style="@style/T_500_12_16_8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/gray_500"
+                android:textColor="@color/orange_500"
                 app:layout_constraintBottom_toBottomOf="@id/tv_title_subject"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/tv_title_subject"
-                tools:text="최소1자-최대20자" />
+                tools:text=" (3/20)" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_title"
@@ -129,6 +159,9 @@
                 android:layout_height="52dp"
                 android:layout_marginTop="8dp"
                 android:textColorHint="@color/gray_400"
+                app:endIconDrawable="@drawable/ic_cancel"
+                app:endIconMode="clear_text"
+                app:endIconTint="@null"
                 app:hintEnabled="false"
                 app:hintTextAppearance="@style/T_500_16_22_4"
                 app:layout_constraintTop_toBottomOf="@id/tv_title_subject">
@@ -139,8 +172,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_basic_information_edittext"
-                    android:maxLength="10"
-                    android:padding="16dp" />
+                    android:maxLength="20"
+                    android:padding="16dp"
+                    android:singleLine="true"
+                    android:textColor="@color/gray_900" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -155,6 +190,7 @@
                 app:layout_constraintTop_toBottomOf="@id/til_title" />
 
             <TextView
+                android:id="@+id/tv_apt_address_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -162,6 +198,19 @@
                 android:textColor="#E93528"
                 app:layout_constraintStart_toEndOf="@id/tv_apt_address_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_apt_address_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_apt_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_apt_address_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_apt_address_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_apt_address_asterisk"
+                tools:visibility="visible" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_apt_address"
@@ -179,8 +228,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_basic_information_edittext"
-                    android:maxLength="10"
-                    android:padding="16dp" />
+                    android:focusable="false"
+                    android:hint="@string/hint_apt_address"
+                    android:padding="16dp"
+                    android:singleLine="true"
+                    android:textColor="@color/gray_900" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -199,8 +251,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_basic_information_edittext"
-                    android:maxLength="10"
-                    android:padding="16dp" />
+                    android:enabled="false"
+                    android:hint="@string/hint_apt_name"
+                    android:padding="16dp"
+                    android:textColor="@color/gray_900" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -215,6 +269,7 @@
                 app:layout_constraintTop_toBottomOf="@id/til_apt_name" />
 
             <TextView
+                android:id="@+id/tv_date_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -223,12 +278,28 @@
                 app:layout_constraintStart_toEndOf="@id/tv_date_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_date_subject" />
 
+            <ImageView
+                android:id="@+id/iv_check_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isInsightDateCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_date_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_date_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_date_asterisk"
+                tools:visibility="visible" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_date"
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 android:layout_marginTop="8dp"
                 android:textColorHint="@color/gray_400"
+                app:endIconDrawable="@drawable/ic_cancel"
+                app:endIconMode="clear_text"
+                app:endIconTint="@null"
                 app:hintEnabled="false"
                 app:hintTextAppearance="@style/T_500_16_22_4"
                 app:layout_constraintTop_toBottomOf="@id/tv_date_subject">
@@ -241,8 +312,22 @@
                     android:background="@drawable/bg_basic_information_edittext"
                     android:hint="@string/hint_date_of_visit"
                     android:maxLength="10"
-                    android:padding="16dp" />
+                    android:padding="16dp"
+                    android:singleLine="true"
+                    android:textColor="@color/gray_900" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/tv__date_error"
+                style="@style/T_500_12_16_8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/red"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/til_date"
+                tools:text="@string/insight_date_error_type_before"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_time_subject"
@@ -256,6 +341,7 @@
                 app:layout_constraintTop_toBottomOf="@id/til_date" />
 
             <TextView
+                android:id="@+id/tv_time_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -263,6 +349,19 @@
                 android:textColor="#E93528"
                 app:layout_constraintStart_toEndOf="@id/tv_time_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_time_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isInsightTimeCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_time_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_time_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_time_asterisk"
+                tools:visibility="visible" />
 
             <TextView
                 style="@style/T_500_12_16_8"
@@ -349,6 +448,7 @@
                 app:layout_constraintTop_toBottomOf="@id/cl_time" />
 
             <TextView
+                android:id="@+id/tv_traffic_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -356,6 +456,19 @@
                 android:textColor="#E93528"
                 app:layout_constraintStart_toEndOf="@id/tv_traffic_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_traffic_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_traffic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isInsightTrafficCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_traffic_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_traffic_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_traffic_asterisk"
+                tools:visibility="visible" />
 
             <TextView
                 style="@style/T_500_12_16_8"
@@ -440,6 +553,7 @@
                 app:layout_constraintTop_toBottomOf="@id/cl_traffic" />
 
             <TextView
+                android:id="@+id/tv_entrance_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -447,6 +561,19 @@
                 android:textColor="#E93528"
                 app:layout_constraintStart_toEndOf="@id/tv_entrance_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_entrance_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_entrance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isInsightEntranceCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_entrance_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_entrance_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_entrance_asterisk"
+                tools:visibility="visible" />
 
             <TextView
                 style="@style/T_500_12_16_8"
@@ -554,11 +681,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_marginTop="8dp"
-                android:padding="16dp"
                 android:background="@drawable/sr_white_gray100_all8"
+                android:padding="16dp"
                 android:text="@string/insight_summary_example"
                 android:textColor="@color/gray_400"
-                app:layout_constraintTop_toBottomOf="@id/tv_insight_summary_subject"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_insight_summary_subject" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
