--- a/app/src/main/res/layout/fragment_write_insight_complex_facility.xml
+++ b/app/src/main/res/layout/fragment_write_insight_complex_facility.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="info.imdang.imdang.ui.write.WriteInsightViewModel" />
 
     </data>
 
@@ -30,6 +37,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_family_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,6 +45,19 @@
                 android:textColor="@color/red"
                 app:layout_constraintStart_toEndOf="@id/tv_family_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_family_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_traffic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isComplexFacilityFamilyCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_family_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_family_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_family_asterisk"
+                tools:visibility="visible" />
 
             <TextView
                 style="@style/T_500_12_16_8"
@@ -122,6 +143,7 @@
                 app:layout_constraintTop_toBottomOf="@id/cl_family" />
 
             <TextView
+                android:id="@+id/tv_multipurpose_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -129,6 +151,19 @@
                 android:textColor="@color/red"
                 app:layout_constraintStart_toEndOf="@id/tv_multipurpose_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_multipurpose_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_multipurpose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isComplexFacilityMultiPurposeCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_multipurpose_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_multipurpose_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_multipurpose_asterisk"
+                tools:visibility="visible" />
 
             <TextView
                 style="@style/T_500_12_16_8"
@@ -241,6 +276,7 @@
                 app:layout_constraintTop_toBottomOf="@id/cl_multipurpose" />
 
             <TextView
+                android:id="@+id/tv_leisure_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -248,6 +284,19 @@
                 android:textColor="@color/red"
                 app:layout_constraintStart_toEndOf="@id/tv_leisure_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_leisure_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_leisure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isComplexFacilityLeisureCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_leisure_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_leisure_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_leisure_asterisk"
+                tools:visibility="visible" />
 
             <TextView
                 style="@style/T_500_12_16_8"
@@ -475,6 +524,7 @@
                 app:layout_constraintTop_toBottomOf="@id/cl_leisure" />
 
             <TextView
+                android:id="@+id/tv_environment_asterisk"
                 style="@style/T_600_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -482,6 +532,19 @@
                 android:textColor="@color/red"
                 app:layout_constraintStart_toEndOf="@id/tv_environment_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_environment_subject" />
+
+            <ImageView
+                android:id="@+id/iv_check_environment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_check"
+                android:visibility="@{viewModel.isComplexFacilityEnvironmentCheckImageVisible ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_environment_asterisk"
+                app:layout_constraintStart_toEndOf="@id/tv_environment_asterisk"
+                app:layout_constraintTop_toTopOf="@id/tv_environment_asterisk"
+                tools:visibility="visible" />
 
             <TextView
                 style="@style/T_500_12_16_8"
